--- a/src/app/brand/components/campaign-target/campaign-target.component.html
+++ b/src/app/brand/components/campaign-target/campaign-target.component.html
@@ -51,7 +51,7 @@
                 <p class="heading-white mb-0">{{ 'brand.increaseTraffic' | translate }}</p>
             </button>
         </div>
-        <div class="col-xl-3 col-lg-4 col-md-6">
+        <!-- <div class="col-xl-3 col-lg-4 col-md-6">
             <button (click)="getSelectedCampaignTypeName(campaignTargetList[5])" id="questionsForm"
                 class="btn btn-secondary btn-target text-start  w-100"
                 [ngClass]="{'selected': selectedTarget?.id === '6'}">
@@ -59,6 +59,6 @@
                     {{'shared.questionsForm' | translate}}</h6>
                 <p class="heading-white mb-0">{{ 'brand.getDataFromUsers' | translate }}</p>
             </button>
-        </div>
+        </div> -->
     </div>
 </div>
